@@ -1,6 +1,7 @@
 v4.13.1 ??? ??? ???
   - Added the all_raise_py_exception argument to the %Module directive.
   - Added the /NoRaisesPyException/ function annotation.
+  - Added the /PyName/ typedef annotation.
   - Class templates now allow super-classes to be defined as template
     arguments.
   - Added support for 'public' preceding the name of a class in a super-class
